--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,7 +46,7 @@ set -g mouse on
 # Bind Ctrl-b followed by F to execute a command
 bind-key -n C-F run-shell "~/.dotfiles/scripts/tmux-sessions.sh"
 bind-key -n C-G run-shell "~/.dotfiles/scripts/tmux-sessions-by-dirname.sh"
-bind-key -r D run-shell "~/.dotfiles/scripts/tmux-delete-sessions.sh"
+bind-key -n C-X run-shell "~/.dotfiles/scripts/tmux-delete-sessions.sh"
 
 # TMUX PLUGINS
 # have to set the tmux plugin manager as a plugin, I guess
