committing new nvim submodule version & adding tmux keybind for running the open vim from single file script, but it doesn't currently work when executing from this keybind for some reason - WIP

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -47,6 +47,7 @@ set -g mouse on
 bind-key -n C-F run-shell "~/.dotfiles/scripts/tmux-sessions.sh"
 bind-key -n C-G run-shell "~/.dotfiles/scripts/tmux-sessions-by-dirname.sh"
 bind-key -n C-X run-shell "~/.dotfiles/scripts/tmux-delete-sessions.sh"
+bind-key -n C-T run-shell "~/.dotfiles/scripts/find_and_open_file_in_vim.sh"
 
 # TMUX PLUGINS
 # have to set the tmux plugin manager as a plugin, I guess
