--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,10 +43,11 @@ bind -r m resize-pane -Z
 # enable mouse on tmux (nice for resizing panes)
 set -g mouse on
 
-# Bind Ctrl-b followed by F to execute a command
+# Bind Ctrl-a followed by F to execute a command
 bind-key -n C-F run-shell "~/.dotfiles/scripts/tmux-sessions.sh"
 bind-key -n C-G run-shell "~/.dotfiles/scripts/tmux-sessions-by-dirname.sh"
 bind-key -n C-X run-shell "~/.dotfiles/scripts/tmux-delete-sessions.sh"
+bind-key -n C-I run-shell "~/.dotfiles/scripts/cheatsht/tmux-cht.sh"
 
 # TMUX PLUGINS
 # have to set the tmux plugin manager as a plugin, I guess
