adding some new tmux keybinds for swithc-client commands

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,9 @@ set -g default-terminal "screen-256color"
 # neovim in tmux has a huge delay going from insert mode to visual mode, so need to manually reduce it
 set -sg escape-time 0
 
+# sets base index of panes & windows to 1 instead of 0
+set -g base-index 1
+
 # remap tmux prefix to ctrl-a & unbind ctrl-b to free it up
 set -g prefix C-a
 unbind C-b
@@ -26,6 +29,11 @@ bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
+
+# remap session switch binds
+bind 9 switch-client -p
+bind 0 switch-client -n
+bind ';' switch-client -l
 
 # enabled vi mode in tmux
 set-window-option -g mode-keys vi
