unbinding Tab in tmux conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -57,6 +57,9 @@ bind-key -n C-G run-shell "~/.dotfiles/scripts/tmux-sessions-by-dirname.sh"
 bind-key -n C-X run-shell "~/.dotfiles/scripts/tmux-delete-sessions.sh"
 bind-key -n C-I run-shell "~/.dotfiles/scripts/cheatsht/tmux-cht.sh"
 
+# Tab is somehow bound to something, so unbinding to return default Tab functionality
+unbind-key -n Tab
+
 # TMUX PLUGINS
 # have to set the tmux plugin manager as a plugin, I guess
 set -g @plugin 'tmux-plugins/tpm'
