binding tmux-cht script to C-U since C-I isnt working

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -55,7 +55,7 @@ set -g mouse on
 bind-key -n C-F run-shell "~/.dotfiles/scripts/tmux-sessions.sh"
 bind-key -n C-G run-shell "~/.dotfiles/scripts/tmux-sessions-by-dirname.sh"
 bind-key -n C-X run-shell "~/.dotfiles/scripts/tmux-delete-sessions.sh"
-bind-key -n C-I run-shell "~/.dotfiles/scripts/cheatsht/tmux-cht.sh"
+bind-key -n C-U run-shell "~/.dotfiles/scripts/cheatsht/tmux-cht.sh"
 
 # Tab is somehow bound to something, so unbinding to return default Tab functionality
 unbind-key -n Tab
