--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,11 +51,11 @@ bind -r m resize-pane -Z
 # enable mouse on tmux (nice for resizing panes)
 set -g mouse on
 
-# Bind Ctrl-a followed by F to execute a command
-bind-key -n C-F run-shell "~/.dotfiles/scripts/tmux-sessions.sh"
-bind-key -n C-G run-shell "~/.dotfiles/scripts/tmux-sessions-by-dirname.sh"
-bind-key -n C-X run-shell "~/.dotfiles/scripts/tmux-delete-sessions.sh"
-bind-key -n C-U run-shell "lua ~/.dotfiles/scripts/scriptinizer/scriptinizer.lua"
+# Bind <prefix>[key] to some shell commands
+bind f run-shell "~/.dotfiles/scripts/tmux-sessions.sh"
+bind g run-shell "~/.dotfiles/scripts/tmux-sessions-by-dirname.sh"
+bind x run-shell "~/.dotfiles/scripts/tmux-delete-sessions.sh"
+bind u run-shell "lua ~/.dotfiles/scripts/scriptinizer/scriptinizer.lua"
 
 # Tab is somehow bound to something, so unbinding to return default Tab functionality
 unbind-key -n Tab
