tmux & nvim updates

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,6 +53,8 @@ set -g mouse on
 
 # Bind <prefix>[key] to some shell commands
 bind f run-shell "~/.dotfiles/scripts/tmux-sessions.sh"
+# "bind Space" is overwriting this "next-layout" ability - to return original behavior: "bind-key -T prefix Space next-layout"
+bind Space run-shell "~/.dotfiles/scripts/tmux-sessions.sh"
 bind g run-shell "~/.dotfiles/scripts/tmux-sessions-by-dirname.sh"
 bind x run-shell "~/.dotfiles/scripts/tmux-delete-sessions.sh"
 bind u run-shell "lua ~/.dotfiles/scripts/scriptinizer/scriptinizer.lua"
