--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 # enabled true color functionality in tmux
-set -g default-terminal "screen-256color"
+set -g default-terminal "wezterm"
 
 # neovim in tmux has a huge delay going from insert mode to visual mode, so need to manually reduce it
 set -sg escape-time 0
@@ -66,9 +66,68 @@ set -g @plugin 'tmux-plugins/tpm'
 # tmux plugin for switching panes without prefix (ctrl + j,k,l,h). Add this plugin in nvim to be able to switch from tmux pane to vim window & vice-versa
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+# ------- THEME -------
 # tmux themes plugin & setting theme
-set -g @plugin 'jimeh/tmux-themepack'
-set -g @themepack 'powerline/default/cyan'
+set -g @plugin 'catppuccin/tmux#v2.1.2'
+
+# Configure Catppuccin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_status_background "none"
+set -g @catppuccin_window_status_style "none"
+set -g @catppuccin_pane_status_enabled "off"
+set -g @catppuccin_pane_border_status "off"
+
+# status window style
+set -wg automatic-rename on
+set -g automatic-rename-format "Window"
+set -g status-position top
+set -g status-justify 'absolute-centre'
+set -g status-style "bg=#{@thm_bg}"
+set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
+set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_peach}"
+set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
+set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
+set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
+set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
+
+# pane border look and feel
+setw -g pane-border-status top
+setw -g pane-border-format ""
+setw -g pane-active-border-style "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
+setw -g pane-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
+setw -g pane-border-lines single
+
+# status left style
+set -g status-left-length 100
+set -g status-left ""
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_maroon}]  #{pane_current_command} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
+
+# status right style
+set -g @cpu_low_bg_color "#[bg=#{@thm_green}]" # background color when cpu is low
+set -g @cpu_medium_bg_color "#[bg=#{@thm_yellow}]" # background color when cpu is medium
+set -g @cpu_high_bg_color "#[bg=#{@thm_red}]" # background color when cpu is high
+set -g status-right-length 100
+set -g status-right ""
+set -ga status-right "#[bg=#{@thm_bg}]#{cpu_bg_color}#[fg=#{@thm_bg}]  #{cpu_percentage} "
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+set -ga status-right "#{?#{e|>=:10,#{battery_percentage}},#{#[bg=#{@thm_red},fg=#{@thm_bg}]},#{#[bg=#{@thm_bg},fg=#{@thm_pink}]}} #{battery_icon} #{battery_percentage} "
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+set -ga status-right "#[bg=#{@thm_bg}]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
+
+# add tmux-cpu plugin
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
+# ------- THEME -------
 
 # persist tmux sessions after computer restarts
 set -g @plugin 'tmux-plugins/tmux-resurrect'
