feat: adding tmux-online-status module

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -110,6 +110,10 @@ set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|
 set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
 set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
 
+# Configure Online
+set -g @online_icon "ok"
+set -g @offline_icon "nok"
+
 # status right style
 set -g @cpu_low_bg_color "#[bg=#{@thm_green}]" # background color when cpu is low
 set -g @cpu_medium_bg_color "#[bg=#{@thm_yellow}]" # background color when cpu is medium
@@ -127,6 +131,7 @@ set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M 
 # add tmux-cpu plugin
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-online-status'
 # ------- THEME -------
 
 # persist tmux sessions after computer restarts
