feat: new font, new alias, new nvim submodule

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -17,4 +17,4 @@
   # git add wrapper
   fa = "!git status -s | awk '{print $2}' | fzf-tmux --multi --preview 'git diff --color=always {}' | xargs git add && git status"
   # git restore wrapper
-  fr = "!git status -s | awk '{print $2}' | fzf-tmux --nulti --preview 'git diff --color=always {}' | xargs git restore --staged && git status"
+  fr = "!git status -s | awk '{print $2}' | fzf-tmux --nulti --preview 'git diff --color=always {}' | xargs git restore && git status"
